--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -102,13 +102,6 @@ Search results
 }
 
 /*
-Note Heading
-*/
-.link-note-heading {
-  line-height: @grid-vertical-half;
-  margin-bottom: 5px;
-}
-/*
 */
 .link-disable {
   pointer-events: none !important;
