--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -351,6 +351,7 @@ Icon texts
 }
 .text-star.small:after{
   font-size: @size-icon-star-small;
+  vertical-align: top;
 }
 .text-star.inactive:after {
   color: @color-text-downplayed;
